--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "giftbit-dynameh",
   "version": "1.0.0",
   "description": "DynamoDB utils.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
