--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/Giftbit/giftbit-dynameh#readme",
   "dependencies": {
-    "aws-sdk": "^2.7.15",
     "lodash.chunk": "^4.2.0"
   },
   "devDependencies": {
     "@types/lodash.chunk": "^4.2.0",
     "@types/node": "^6.0.52"
+  },
+  "peerDependencies": {
+    "aws-sdk": "^2.7.15"
   }
 }
