--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "url": "https://github.com/Giftbit/giftbit-dynameh/issues"
   },
   "homepage": "https://github.com/Giftbit/giftbit-dynameh#readme",
-  "dependencies": {
-    "lodash.chunk": "^4.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/lodash.chunk": "^4.2.0",
     "@types/node": "^6.0.52"
