--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./dist",
-    "docs": "rimraf docs && typedoc src/ --out docs --mode modules --target es6 --excludePrivate --theme minimal",
+    "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --name Dynameh",
     "lint": "tslint --project tsconfig.json",
-    "prepublish": "npm run clean && npm run build && npm run lint && npm run test && npm run docs",
+    "prepublish": "npm run clean && npm run build && npm run lint && npm run test && npm run docs && gh-pages -d docs",
     "test": "mocha --recursive --throw-deprecation --require ts-node/register \"src/**/*.test.ts\""
   },
   "repository": {
@@ -37,6 +37,7 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "chai": "^3.5.0",
+    "gh-pages": "^0.12.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
     "ts-node": "^3.0.2",
