Fixed _ files not being served up in Github Pages.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./dist",
-    "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --name Dynameh",
+    "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --name Dynameh && touch ./docs/.nojekyll && gh-pages -d docs -t",
     "lint": "tslint --project tsconfig.json",
-    "prepublish": "npm run clean && npm run build && npm run lint && npm run test && npm run docs && gh-pages -d docs",
+    "prepublish": "npm run clean && npm run build && npm run lint && npm run test && npm run docs",
     "test": "mocha --recursive --throw-deprecation --require ts-node/register \"src/**/*.test.ts\""
   },
   "repository": {
@@ -40,6 +40,7 @@
     "gh-pages": "^0.12.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
+    "touch": "^1.0.0",
     "ts-node": "^3.0.2",
     "tslint": "^4.5.1",
     "typedoc": "^0.5.9",
