Fixed the condition tests (the new code is correct and better).  Renamed "delete" update action to "remove" because  that's what UpdateExpression uses and it's less confusing for those familiar with the underlying syntax even if it is inconsistent with the set action.  Added comments.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./dist",
-    "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --name Dynameh && touch ./docs/.nojekyll && gh-pages -d docs -t",
+    "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --exclude '**/*.test.ts' --name Dynameh && touch ./docs/.nojekyll && gh-pages -d docs -t",
     "lint": "tslint --project tsconfig.json",
     "prepublishOnly": "npm run clean && npm run build && npm run lint && npm run test && npm run docs",
     "test": "mocha --recursive --throw-deprecation --require ts-node/register \"src/**/*.test.ts\""
