--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynameh",
-  "version": "3.2.0",
+  "version": "3.3.0-beta.1",
   "description": "DynamoDB on Node more easier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
