--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "clean": "rimraf ./dist",
     "docs": "rimraf ./docs && typedoc src/ --out docs --mode modules --module commonjs --target es6 --excludePrivate --excludeNotExported --exclude '**/*.test.ts' --name Dynameh && touch ./docs/.nojekyll && gh-pages -d docs -t",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint . --ext .ts,.tsx",
     "prepublishOnly": "npm run clean && npm run build && npm run lint && npm run test && npm run docs",
     "test": "mocha --recursive --throw-deprecation --require ts-node/register \"src/**/*.test.ts\""
   },
@@ -36,14 +36,16 @@
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
     "@types/node": "12.x",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "aws-sdk": "^2.580.0",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
     "gh-pages": "^2.2.0",
     "mocha": "^7.1.0",
     "rimraf": "^3.0.2",
     "touch": "^3.1.0",
     "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
     "typedoc": "^0.16.11",
     "typescript": "^3.8.3"
   },
