--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,14 @@
   "exclude": [
     "node_modules",
     "**/*.test.ts"
-  ]
+  ],
+  "typedocOptions": {
+    "entryPoints": ["./src"],
+    "exclude": "**/*.test.ts",
+    "excludeExternals": true,
+    "excludeInternal": true,
+    "excludePrivate": true,
+    "name": "Dynameh",
+    "out": "./docs"
+  }
 }
